Bug 13484 - System report Int 6 error if E820 table reserve the memory above 4G
Summary: System report Int 6 error if E820 table reserve the memory above 4G
Status: CLOSED CODE_FIX
Alias: None
Product: Platform Specific/Hardware
Classification: Unclassified
Component: x86-64 (show other bugs)
Hardware: All Linux
: P1 high
Assignee: platform_x86_64@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-08 04:44 UTC by Peer Chen
Modified: 2012-06-08 11:44 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.29
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Peer Chen 2009-06-08 04:44:22 UTC
The bug is introduced from kernel 2.6.27, if E820 table reserve the memory above 4G in 32bit OS(BIOS-e820: 00000000fff80000 - 0000000120000000 (reserved)), system will report Int 6 error and hang up. The bug is caused by the following code in drivers/firmware/memmap.c, the resource_size_t is 32bit variable in 32bit OS, the BUG_ON() will be invoked to result in the Int 6 error. I try the latest 32bit Ubuntu and Fedora distributions, all hit this bug.
======
static int firmware_map_add_entry(resource_size_t start, resource_size_t end,
				  const char *type,
				  struct firmware_map_entry *entry)
{
	BUG_ON(start > end);

	entry->start = start;
	entry->end = end;
	entry->type = type;
	INIT_LIST_HEAD(&entry->list);
	kobject_init(&entry->kobj, &memmap_ktype);

	list_add_tail(&entry->list, &map_entries);

	return 0;
}
Comment 1 Andrew Morton 2009-06-08 05:12:53 UTC
I believe this is an x86 problem rather than an ACPI one, so I reassigned it.

It's unclear (to me) whether you have a 32-bit or 64-bit CPU.

I assume that if you set CONFIG_PHYS_ADDR_T_64BIT=y in .config, the
problem goes away?
Comment 2 Andrew Morton 2009-06-08 05:13:57 UTC
Cc'ed yinghai, marked as a regression.
Comment 3 Peer Chen 2009-06-08 05:43:25 UTC
I'm using 64bit CPU, Intel P8400.

Yes, if set CONFIG_PHYS_ADDR_T_64BIT, the problem goes away.
Comment 4 Peer Chen 2009-06-08 09:43:09 UTC
Yinghai,

The patch works, thanks.

BRs
Peer Chen
> -----Original Message-----
> From: Yinghai Lu [mailto:yinghai@kernel.org]
> Sent: Monday, June 08, 2009 2:50 PM
> To: bugzilla-daemon@bugzilla.kernel.org; Ingo Molnar; H. Peter Anvin;
Thomas Gleixner; H. Peter Anvin; linux-kernel@vger.kernel.org;
> Peer Chen; Bernhard Walle
> Subject: Re: [Bug 13484] System report Int 6 error if E820 table
reserve the memory above 4G
> 
> bugzilla-daemon@bugzilla.kernel.org wrote:
> > http://bugzilla.kernel.org/show_bug.cgi?id=13484
> >
> >
> >
> >
> >
> > --- Comment #3 from Peer Chen <pchen@nvidia.com>  2009-06-08
05:43:25 ---
> > I'm using 64bit CPU, Intel P8400.
> >
> > Yes, if set CONFIG_PHYS_ADDR_T_64BIT, the problem goes away.
> >
> 
> please check
> 
> ---
>  drivers/firmware/memmap.c    |   12 +++++-------
>  include/linux/firmware-map.h |   12 ++++--------
>  2 files changed, 9 insertions(+), 15 deletions(-)
> 
> Index: linux-2.6/drivers/firmware/memmap.c
> ===================================================================
> --- linux-2.6.orig/drivers/firmware/memmap.c
> +++ linux-2.6/drivers/firmware/memmap.c
> @@ -31,8 +31,8 @@
>   * information is necessary as for the resource tree.
>   */
>  struct firmware_map_entry {
> -     resource_size_t         start;  /* start of the memory range */
> -     resource_size_t         end;    /* end of the memory range
(incl.) */
> +     u64                     start;  /* start of the memory range */
> +     u64                     end;    /* end of the memory range
(incl.) */
>       const char              *type;  /* type of the memory range */
>       struct list_head        list;   /* entry for the linked list */
>       struct kobject          kobj;   /* kobject for each entry */
> @@ -101,7 +101,7 @@ static LIST_HEAD(map_entries);
>   * Common implementation of firmware_map_add() and
firmware_map_add_early()
>   * which expects a pre-allocated struct firmware_map_entry.
>   **/
> -static int firmware_map_add_entry(resource_size_t start,
resource_size_t end,
> +static int firmware_map_add_entry(u64 start, u64 end,
>                                 const char *type,
>                                 struct firmware_map_entry *entry)
>  {
> @@ -132,8 +132,7 @@ static int firmware_map_add_entry(resour
>   *
>   * Returns 0 on success, or -ENOMEM if no memory could be allocated.
>   **/
> -int firmware_map_add(resource_size_t start, resource_size_t end,
> -                  const char *type)
> +int firmware_map_add(u64 start, u64 end, const char *type)
>  {
>       struct firmware_map_entry *entry;
> 
> @@ -157,8 +156,7 @@ int firmware_map_add(resource_size_t sta
>   *
>   * Returns 0 on success, or -ENOMEM if no memory could be allocated.
>   **/
> -int __init firmware_map_add_early(resource_size_t start,
resource_size_t end,
> -                               const char *type)
> +int __init firmware_map_add_early(u64 start, u64 end, const char
*type)
>  {
>       struct firmware_map_entry *entry;
> 
> Index: linux-2.6/include/linux/firmware-map.h
> ===================================================================
> --- linux-2.6.orig/include/linux/firmware-map.h
> +++ linux-2.6/include/linux/firmware-map.h
> @@ -24,21 +24,17 @@
>   */
>  #ifdef CONFIG_FIRMWARE_MEMMAP
> 
> -int firmware_map_add(resource_size_t start, resource_size_t end,
> -                  const char *type);
> -int firmware_map_add_early(resource_size_t start, resource_size_t
end,
> -                        const char *type);
> +int firmware_map_add(u64 start, u64 end, const char *type);
> +int firmware_map_add_early(u64 start, u64 end, const char *type);
> 
>  #else /* CONFIG_FIRMWARE_MEMMAP */
> 
> -static inline int firmware_map_add(resource_size_t start,
resource_size_t end,
> -                                const char *type)
> +static inline int firmware_map_add(u64 start, u64 end, const char
*type)
>  {
>       return 0;
>  }
> 
> -static inline int firmware_map_add_early(resource_size_t start,
> -                                      resource_size_t end, const char
*type)
> +static inline int firmware_map_add_early(u64 start, u64 end, const
char *type)
>  {
>       return 0;
>  }
-----------------------------------------------------------------------------------
This email message is for the sole use of the intended recipient(s) and may contain
confidential information.  Any unauthorized review, use, disclosure or distribution
is prohibited.  If you are not the intended recipient, please contact the sender by
reply email and destroy all copies of the original message.
-----------------------------------------------------------------------------------

Note You need to log in before you can comment on or make changes to this bug.